# net-hawk-poc

./: .gitignore  README.md  config.py  pyproject.toml  settings.toml
.github/workflows/: main.yml
net_hawk_poc/: api.py  main.py
tests/: conftest.py  test_api.py
