[tool.poetry]
name = "net-hawk-poc"
version = "0.1.0"
description = ""
authors = ["giuseppe.fusacchia <giuseppe.fusacchia@assistdigital.com>"]
readme = "README.md"
packages = [{include = "net_hawk_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
ncclient = "^0.6.13"
dynaconf = "^3.2.0"
xmltodict = "^0.13.0"
aiohttp = "^3.8.5"
requests = "^2.31.0"
aiodns = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ipykernel = "^6.25.0"
pytest-asyncio = "^0.21.1"
responses = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
